form js resolved, font link added

--- a/styles/_typography.scss
+++ b/styles/_typography.scss
@@ -4,7 +4,7 @@ html {
 }
 
 body {
-    font-family: serif;
+    font-family: 'Vollkorn', serif;
 }
 
 h1,
@@ -16,6 +16,7 @@ p {
 }
 
 h1 {
+    font-family: 'Playfair Display', serif;
     font-size: 7.2rem;
 }
 
