--- a/styles/styles.css
+++ b/styles/styles.css
@@ -147,7 +147,7 @@ legend, button::-moz-focus-inner, input::-moz-focus-inner {
 
 .wrapper {
   max-width: 1280px;
-  width: 70%;
+  width: 75%;
   margin: 0 auto; }
 
 html {
@@ -165,7 +165,8 @@ p {
 
 h1 {
   font-family: 'Playfair Display', serif;
-  font-size: 7.2rem; }
+  font-size: 7.2rem;
+  line-height: 1; }
 
 .header {
   margin-bottom: 50px; }
@@ -180,22 +181,22 @@ h1 {
     -webkit-box-pack: justify;
     -ms-flex-pack: justify;
     justify-content: space-between;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
+    -webkit-box-align: end;
+    -ms-flex-align: end;
+    align-items: flex-end;
     position: relative; }
     .header__main::before {
       content: '';
       width: 100%;
       border-bottom: 2.5px solid black;
       position: absolute;
-      bottom: 0; }
+      bottom: -10px; }
     .header__main::after {
       content: '';
       width: 100%;
       border-bottom: 5px solid black;
       position: absolute;
-      bottom: -10px; }
+      bottom: -20px; }
   .header__text {
     width: 50%; }
   .header__forms {
@@ -221,5 +222,41 @@ h1 {
   justify-content: space-between; }
   .entries__post {
     width: 24%;
-    height: 300px;
-    background-color: salmon; }
+    margin-bottom: 20px; }
+  .entries__name-header {
+    background-color: black;
+    height: 40px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center; }
+  .entries__name {
+    color: white;
+    font-family: sans-serif;
+    text-transform: uppercase; }
+  .entries__picture {
+    width: 100%;
+    height: 200px; }
+  .entries__image {
+    -o-object-fit: cover;
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    -webkit-filter: grayscale(100%);
+    filter: grayscale(100%); }
+  .entries__details {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-flow: row nowrap;
+    flex-flow: row nowrap;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between; }
