js augmented and layout changed

--- a/styles/components/_header.scss
+++ b/styles/components/_header.scss
@@ -1,5 +1,6 @@
 .header {
-    margin-bottom: 50px;
+    padding-top: 10rem;
+    margin-bottom: 0;
     &__main {
         display: flex;
         flex-flow: row nowrap;
