--- a/styles/_utils.scss
+++ b/styles/_utils.scss
@@ -1,5 +1,10 @@
-.wrapper {
-    max-width: 1280px;
-    width: 75%;
-    margin: 0 auto;
+
+body {
+    background-image: url(./assets/paper.png);
+    .wrapper {
+        max-width: 1280px;
+        width: 75%;
+        margin: 0 auto 10rem auto;
+
+    }
 }
