--- a/styles/components/_main.scss
+++ b/styles/components/_main.scss
@@ -1,10 +1,15 @@
 .entries {
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-between;
+    display: grid;
+    // flex-flow: row wrap;
+    // justify-content: space-between;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 1rem;
+    
     &__post {
-        width: 24%;
-        margin-bottom: 20px;
+        // background-color: rgba(211,211,211,0.4);
+        border: 2px solid black;
+        // width: 24%;
+        // margin-bottom: 20px;
     }
     &__name-header {
         background-color: black;
@@ -12,15 +17,18 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        overflow: hidden;
     }
     &__name {
-        color: white;
-        font-family: sans-serif;
+        font-family: 'Vollkorn', serif;
+        font-size: calc(1rem + 1vw);
+        font-weight: 300;
         text-transform: uppercase;
+        color: white;
     }
     &__picture {
         width: 100%;
-        height: 200px;
+        height: 300px;
     }
     &__image {
         object-fit: cover;
@@ -29,8 +37,18 @@
         filter: grayscale(100%);
     }
     &__details {
+        margin: 0.5rem 0;
         display: flex;
         flex-flow: row nowrap;
-        justify-content: space-between;
+        font-size: calc(0.5rem + 0.5vw);
+        justify-content: space-around;
+    }
+    &__text {
+        font-size: calc(0.5rem + 0.7vw);
+        text-align: justify;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        height: 100px;
+        // padding: 1rem 0;
     }
 }
