--- a/styles/_utils.scss
+++ b/styles/_utils.scss
@@ -4,7 +4,7 @@ body {
     .wrapper {
         max-width: 1280px;
         width: 75%;
-        margin: 0 auto 10rem auto;
+        margin: 0 auto;
 
     }
 }
