--- a/styles/components/_header.scss
+++ b/styles/components/_header.scss
@@ -1,6 +1,12 @@
 .header {
     padding-top: 10rem;
     margin-bottom: 0;
+    position: fixed;
+    z-index: 10;
+    width: 100%;
+    background-image: url(./assets/paper.png);
+    background-size: contain;
+
     &__main {
         display: flex;
         flex-flow: row nowrap;
