--- a/styles/styles.css
+++ b/styles/styles.css
@@ -150,7 +150,7 @@ body {
   body .wrapper {
     max-width: 1280px;
     width: 75%;
-    margin: 0 auto 10rem auto; }
+    margin: 0 auto 3rem auto; }
 
 html {
   font-size: 62.5%; }
@@ -172,7 +172,12 @@ h1 {
 
 .header {
   padding-top: 10rem;
-  margin-bottom: 0; }
+  margin-bottom: 0;
+  position: fixed;
+  z-index: 10;
+  width: 100%;
+  background-image: url(./assets/paper.png);
+  background-size: contain; }
   .header__main {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -213,6 +218,7 @@ h1 {
     justify-content: flex-end; }
 
 .entries {
+  padding-top: 20rem;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-gap: 1rem; }
