--- a/styles/styles.css
+++ b/styles/styles.css
@@ -220,7 +220,7 @@ h1 {
 .entries {
   padding-top: 20rem;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: repeat(4, 1fr);
   grid-gap: 1rem; }
   .entries__post {
     border: 2px solid black; }
@@ -245,7 +245,7 @@ h1 {
     color: white; }
   .entries__picture {
     width: 100%;
-    height: 300px; }
+    height: 150px; }
   .entries__image {
     -o-object-fit: cover;
     object-fit: cover;
@@ -272,3 +272,50 @@ h1 {
     -o-text-overflow: ellipsis;
     text-overflow: ellipsis;
     height: 100px; }
+
+.profile {
+  width: 80%;
+  height: 80vh;
+  background-image: url(./assets/paper.png);
+  margin: 0 auto;
+  display: block;
+  position: absolute;
+  top: 10%;
+  left: 10%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: fixed; }
+  .profile .leftSide {
+    width: 50%;
+    border: 1px solid black;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column; }
+  .profile .rightSide {
+    width: 50%;
+    border: 1px solid black;
+    position: relative;
+    overflow: hidden; }
+
+.displayPet .closeBtn {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+  -ms-flex-pack: end;
+  justify-content: flex-end;
+  position: absolute;
+  top: 10px;
+  right: 10px; }
+  .displayPet .closeBtn i {
+    font-size: 2rem;
+    margin-top: 0.5rem;
+    margin-right: 1rem; }
+
+.petImage {
+  width: 200px; }
