--- a/styles/_typography.scss
+++ b/styles/_typography.scss
@@ -4,12 +4,13 @@ html {
 }
 
 body {
-    font-family: 'Vollkorn', serif;
+    font-family: 'Playfair Display', serif;
 }
 
 h1,
 h2,
 h3,
+h4,
 p {
     margin: 0;
     color: black;
@@ -22,13 +23,17 @@ h1 {
 }
 
 h2 {
-    // font-size: 1.6rem;
+    font-size: 3.6rem;
 }
 
 h3 {
-    // font-size: 1.4rem;
+    font-size: 2.4rem;
+}
+
+h4 {
+    font-size: 2rem;
 }
 
 p {
-    // font-size: 1.3rem;
+    font-size: 1.8rem;
 }
