--- a/styles/_utils.scss
+++ b/styles/_utils.scss
@@ -1,10 +1,20 @@
+input, select {
+    height: 40px;
+}
 
-body {
-    background-image: url(./assets/paper.png);
-    .wrapper {
-        max-width: 1280px;
-        width: 75%;
-        margin: 0 auto;
+input {
+    padding-left: 10px;
+}
 
-    }
+select {
+    background-color: black;
+    background: url(/styles/assets/chevron-down.svg) right center no-repeat;
+    background-size: 15%;
+    font-size: 1.6rem;
+}
+
+.wrapper {
+    max-width: 1280px;
+    width: 75%;
+    margin: 0 auto;
 }
