--- a/styles/components/_profile.scss
+++ b/styles/components/_profile.scss
@@ -1,66 +1,73 @@
 .profile {
-    display: flex;
-    background-color: salmon;
+    background-color: gainsboro;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    width: 80%;
+    height: 80vh;
+    display: none;
+    padding: 30px;
+    box-shadow: 5px 5px 15px grey;
+    z-index: 10;
     &__left {
         width: 50%;
+        margin-right: 30px;
+    }
+    &__name {
+        text-transform: capitalize;
+        position: relative;
+        &::after {
+            content: '';
+            width: 100%;
+            border-bottom: 2px solid black;
+            position: absolute;
+            bottom: -10px;
+            left: 0; 
+        }
+    }
+    &__name-container {
+        height: 15%;
+    }
+    &__picture {
+        width: 100%;
+        height: 85%;
+    }
+    &__image {
+        object-fit: cover;
+        width: 100%;
+        height: 100%;
+        filter: grayscale(100%);
     }
     &__right {
         width: 50%;
+        overflow: scroll;
     }
-    width: 80%;
-    height: 80vh;
-    background-image: url(./assets/paper.png);
-    margin: 0 auto;
-    display: block;
-    position: absolute;
-    top: 10%;
-    left: 10%;
-    display: flex;
-    position: fixed;
-    .leftSide {
-        width: 50%;
-        border: 1px solid black;
-        display: flex;
-        flex-direction: column;
-        // &__nameContainer {
-        //     background-color: black;
-        //     height: 40px;
-        //     display: flex;
-        //     justify-content: center;
-        //     align-items: center;
-        //     overflow: hidden;
-        // }
-        // &__name {
-        //     font-family: 'Vollkorn', serif;
-        //     font-size: calc(1rem + 1vw);
-        //     font-weight: 300;
-        //     text-transform: uppercase;
-        //     color: white;
-        // }
-    }
-        .rightSide {
-        width: 50%;
-        border: 1px solid black;
+    &__breed {
         position: relative;
-        overflow: hidden;
-    }
-}
-.displayPet {
-    .closeBtn {
-        display: flex;
-        justify-content: flex-end;
-        position: absolute;
-        top: 10px;
-        right: 10px;
-        // color: red;
-        i {
-            font-size: 2rem;
-            margin-top: 0.5rem;
-            margin-right: 1rem;
+        margin-bottom: 20px;
+        &::after {
+            content: '';
+            width: 100%;
+            border-bottom: 2px solid black;
+            position: absolute;
+            bottom: -10px;
+            left: 0; 
         }
     }
-}
-
-.petImage {
-    width: 200px;
+    &__contact {
+        position: relative;
+        margin-bottom: 20px;
+        &::after {
+            content: '';
+            width: 100%;
+            border-bottom: 2px solid black;
+            position: absolute;
+            bottom: -10px;
+            left: 0; 
+        }
+    }
+    &__description {
+        line-height: 1.7;
+    }
 }
