--- a/styles/_typography.scss
+++ b/styles/_typography.scss
@@ -37,3 +37,43 @@ h4 {
 p {
     font-size: 1.8rem;
 }
+
+
+// MEDIA QUERY
+
+@media (max-width: 850px) {
+    h1 {
+        font-size: 5.4rem;
+    }
+    h2 {
+        font-size: 3rem;
+    }
+    h3 {
+        font-size: 2rem;
+    }
+    h4 {
+        font-size: 1.8rem;
+    }
+    p {
+        font-size: 1.6rem;
+    }
+}
+
+@media (max-width: 450px) {
+    h1 {
+        font-size: 4.8rem;
+    }
+    h2 {
+        font-size: 2.4rem;
+    }
+    h3 {
+        font-size: 1.8rem;
+    }
+    h4 {
+        font-size: 1.4rem;
+    }
+
+    p {
+        font-size: 1.2rem;
+    }
+}
