--- a/styles/components/_header.scss
+++ b/styles/components/_header.scss
@@ -1,11 +1,11 @@
 header {
     position: fixed;
-    top: 25%;
+    top: 30%;
     left: 0;
     width: 100%;
     height: 200px;
     z-index: 5;
-    background: white;
+    background-color: lightgrey;
     display: flex;
     align-items: center;
 }
@@ -33,21 +33,22 @@ header {
         }
     }
     &__text {
-        width: 45%;
+        width: 48%;
     }
     &__title {
         margin-bottom: 10px;
     }
     &__subtitle {
-        font-family: sans-serif;
+        font-family: 'Montserrat', sans-serif;
         font-weight: 100;
         text-transform: uppercase;
     }
     &__forms {
-        width: 55%;
+        width: 52%;
     }
     &__form {
         display: flex;
+        flex-flow: row nowrap;
         justify-content: flex-end;
     }
     &__pet {
@@ -84,6 +85,7 @@ header {
         font-size: 1.6rem;
         border: 0;
         color: grey;
+        background-color: transparent;
         &::placeholder {
             text-transform: capitalize;
             font-size: 1.6rem;
@@ -96,5 +98,91 @@ header {
         border-radius: none;
         border: 0;
         font-size: 1.6rem;
+    }
+}
+
+
+// MEDIA QUERY
+
+@media (max-width: 1180px) {
+    header {
+        height: 250px;
+    }
+    .header {
+        &__main {
+            flex-flow: column nowrap;
+            align-items: center;
+        }
+        &__text {
+            width: 100%;
+            text-align: center;
+            margin-bottom: 15px;
+        }
+        &__title {
+            margin-bottom: 10px;
+        }
+        &__subtitle {
+            font-family: 'Montserrat', sans-serif;
+            font-weight: 100;
+            text-transform: uppercase;
+        }
+        &__forms {
+            width: 100%;
+        }
+        &__pet {
+            margin-right: 25px;
+        }
+        &__sex {
+            margin-right: 25px;
+        }
+        &__maturity {
+            margin-right: 25px;
+        }
+        &__location {
+            margin-right: 25px;
+        }
+    }
+}
+
+@media (max-width: 650px) {
+    header {
+        height: 300px;
+    }
+    .header {
+        &__form {
+            flex-flow: row wrap;
+            justify-content: space-between;
+        }
+        &__pet {
+            width: 30%;
+            margin-right: 0;
+            margin-bottom: 20px;
+        }
+        &__sex {
+            width: 30%;
+            margin-right: 0;
+            margin-bottom: 20px;
+        }
+        &__maturity {
+            width: 30%;
+            margin-right: 0;
+            margin-bottom: 20px;
+        }
+        &__location {
+            width: 75%;
+            margin-right: 0;
+        }
+        &__submit {
+            width: 20%;
+        }
+    }
+}
+
+@media (max-width: 450px) {
+    header {
+        top: 30%;
+        height: 300px;
+    }
+    .header {
     }
 }
