--- a/styles/components/_main.scss
+++ b/styles/components/_main.scss
@@ -18,7 +18,7 @@ main {
         overflow: hidden;
     }
     &__name {
-        font-family: sans-serif;
+        font-family: 'Montserrat', sans-serif;
         font-weight: 500;
         text-transform: uppercase;
         color: white;
@@ -32,5 +32,35 @@ main {
         width: 100%;
         height: 100%;
         filter: grayscale(100%);
+    }
+}
+
+
+// MEDIA QUERY
+
+@media (max-width: 1180px) {
+    main {
+        margin-top: 250px;
+    }
+    .entries {
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+
+@media (max-width: 650px) {
+    main {
+        margin-top: 300px;
+    }
+    .entries {
+        grid-template-columns: repeat(2,1fr);
+    }
+}
+
+@media (max-width: 450px) {
+    main {
+        margin-top: 300px;
+    }
+    .entries {
+        grid-template-columns: 1fr;
     }
 }
