--- a/styles/components/_profile.scss
+++ b/styles/components/_profile.scss
@@ -71,3 +71,48 @@
         line-height: 1.7;
     }
 }
+
+
+// MEDIA QUERY
+
+@media (max-width: 650px) {
+    .profile {
+        flex-flow: column nowrap;
+        height: 90vh;
+        &__left {
+            width: 100%;
+            height: 50%;
+        }
+        &__name-container {
+            margin-bottom: 20px;
+        }
+        &__picture {
+            height: 70%;
+        }
+        &__right {
+            width: 100%;
+            height: 50%;
+        }
+    }
+}
+
+@media (max-width: 450px) {
+    .profile {
+        flex-flow: column nowrap;
+        height: 90vh;
+        &__left {
+            width: 100%;
+            height: 40%;
+        }
+        &__name-container {
+            margin-bottom: 25px;
+        }
+        &__picture {
+            height: 70%;
+        }
+        &__right {
+            width: 100%;
+            height: 60%;
+        }
+    }
+}
