--- a/styles/styles.css
+++ b/styles/styles.css
@@ -145,6 +145,9 @@ legend, button::-moz-focus-inner, input::-moz-focus-inner {
   clip: rect(0 0 0);
   overflow: hidden; }
 
+body {
+  background-color: lightgrey; }
+
 input, select {
   height: 40px; }
 
@@ -193,14 +196,38 @@ h4 {
 p {
   font-size: 1.8rem; }
 
+@media (max-width: 850px) {
+  h1 {
+    font-size: 5.4rem; }
+  h2 {
+    font-size: 3rem; }
+  h3 {
+    font-size: 2rem; }
+  h4 {
+    font-size: 1.8rem; }
+  p {
+    font-size: 1.6rem; } }
+
+@media (max-width: 450px) {
+  h1 {
+    font-size: 4.8rem; }
+  h2 {
+    font-size: 2.4rem; }
+  h3 {
+    font-size: 1.8rem; }
+  h4 {
+    font-size: 1.4rem; }
+  p {
+    font-size: 1.2rem; } }
+
 header {
   position: fixed;
-  top: 25%;
+  top: 30%;
   left: 0;
   width: 100%;
   height: 200px;
   z-index: 5;
-  background: white;
+  background-color: lightgrey;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -237,23 +264,27 @@ header {
     bottom: -30px; }
 
 .header__text {
-  width: 45%; }
+  width: 48%; }
 
 .header__title {
   margin-bottom: 10px; }
 
 .header__subtitle {
-  font-family: sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-weight: 100;
   text-transform: uppercase; }
 
 .header__forms {
-  width: 55%; }
+  width: 52%; }
 
 .header__form {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -ms-flex-flow: row nowrap;
+  flex-flow: row nowrap;
   -webkit-box-pack: end;
   -ms-flex-pack: end;
   justify-content: flex-end; }
@@ -291,7 +322,8 @@ header {
   margin-right: 15px;
   font-size: 1.6rem;
   border: 0;
-  color: grey; }
+  color: grey;
+  background-color: transparent; }
   .header__location::-webkit-input-placeholder {
     text-transform: capitalize;
     font-size: 1.6rem; }
@@ -312,6 +344,72 @@ header {
   border-radius: none;
   border: 0;
   font-size: 1.6rem; }
+
+@media (max-width: 1180px) {
+  header {
+    height: 250px; }
+  .header__main {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-flow: column nowrap;
+    flex-flow: column nowrap;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center; }
+  .header__text {
+    width: 100%;
+    text-align: center;
+    margin-bottom: 15px; }
+  .header__title {
+    margin-bottom: 10px; }
+  .header__subtitle {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 100;
+    text-transform: uppercase; }
+  .header__forms {
+    width: 100%; }
+  .header__pet {
+    margin-right: 25px; }
+  .header__sex {
+    margin-right: 25px; }
+  .header__maturity {
+    margin-right: 25px; }
+  .header__location {
+    margin-right: 25px; } }
+
+@media (max-width: 650px) {
+  header {
+    height: 300px; }
+  .header__form {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-flow: row wrap;
+    flex-flow: row wrap;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between; }
+  .header__pet {
+    width: 30%;
+    margin-right: 0;
+    margin-bottom: 20px; }
+  .header__sex {
+    width: 30%;
+    margin-right: 0;
+    margin-bottom: 20px; }
+  .header__maturity {
+    width: 30%;
+    margin-right: 0;
+    margin-bottom: 20px; }
+  .header__location {
+    width: 75%;
+    margin-right: 0; }
+  .header__submit {
+    width: 20%; } }
+
+@media (max-width: 450px) {
+  header {
+    top: 30%;
+    height: 300px; } }
 
 main {
   margin-top: 200px; }
@@ -336,7 +434,7 @@ main {
     align-items: center;
     overflow: hidden; }
   .entries__name {
-    font-family: sans-serif;
+    font-family: 'Montserrat', sans-serif;
     font-weight: 500;
     text-transform: uppercase;
     color: white; }
@@ -350,6 +448,24 @@ main {
     height: 100%;
     -webkit-filter: grayscale(100%);
     filter: grayscale(100%); }
+
+@media (max-width: 1180px) {
+  main {
+    margin-top: 250px; }
+  .entries {
+    grid-template-columns: repeat(3, 1fr); } }
+
+@media (max-width: 650px) {
+  main {
+    margin-top: 300px; }
+  .entries {
+    grid-template-columns: repeat(2, 1fr); } }
+
+@media (max-width: 450px) {
+  main {
+    margin-top: 300px; }
+  .entries {
+    grid-template-columns: 1fr; } }
 
 .profile {
   background-color: gainsboro;
@@ -416,3 +532,39 @@ main {
       left: 0; }
   .profile__description {
     line-height: 1.7; }
+
+@media (max-width: 650px) {
+  .profile {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-flow: column nowrap;
+    flex-flow: column nowrap;
+    height: 90vh; }
+    .profile__left {
+      width: 100%;
+      height: 50%; }
+    .profile__name-container {
+      margin-bottom: 20px; }
+    .profile__picture {
+      height: 70%; }
+    .profile__right {
+      width: 100%;
+      height: 50%; } }
+
+@media (max-width: 450px) {
+  .profile {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-flow: column nowrap;
+    flex-flow: column nowrap;
+    height: 90vh; }
+    .profile__left {
+      width: 100%;
+      height: 40%; }
+    .profile__name-container {
+      margin-bottom: 25px; }
+    .profile__picture {
+      height: 70%; }
+    .profile__right {
+      width: 100%;
+      height: 60%; } }
